<resources>
    <string name="app_name">Android</string>
    <string name="btn_start">Pulsar</string>
    <string name="hint_name">Escribí tu nombre</string>
    <string name="greeting">Hola %1$s</string>

    <!--    ICC-->
    <string name="Female">Mujer</string>
    <string name="Hombre">Hombre</string>
    <string name="Altura">Altura</string>
    <string name="weight">Peso</string>
    <string name="btnSubWeight">btnSubWeight</string>
    <string name="btnAddWeight">btnAddWeight</string>
    <string name="desc_height_slider">Seleccionar altura</string>
    <string name="Age">Edad</string>
    <string name="btnSubAge">btnSubAge</string>
    <string name="btnAddAge">btnAddAge</string>
    <string name="calculate">Calcular</string>
    <string name="Recalculate">Recalcular</string>
    <string name="you_result">Tu Resultado</string>
    <string name="textResult">textResult</string>
    <string name="textICM">textICM</string>
    <string name="textDescription">textDescription</string>
    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="title_peso_normal">Peso Normal</string>
    <string name="title_sobrepeso">SobrePeso</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="descripcione_bajo_peso">Bajo peso — Podrías necesitar aumentar tu masa corporal de forma saludable.</string>
    <string name="descripcione_peso_normal">Peso normal — Te encontrás en un rango saludable, seguí así.</string>
    <string name="descripcione_sobrepeso">Sobrepeso — Recomendable mejorar hábitos alimenticios y realizar ejercicio regular.</string>
    <string name="descripcione_obesidad">Obesidad — Peligro mejorar hábitos alimenticios y realizar ejercicio regular.</string>
    <string name="error">Error</string>
    <string name="SaludarApp">SaludarApp</string>
    <string name="IMCApp">IMCApp</string>

    <!--    Todo-->
    <string name="ToDoApp">ToDoApp</string>
    <string name="todo_title">titulo</string>
    <string name="todo_category">Categoria</string>
    <string name="todo_task">Tarea</string>
    <string name="todo_description">titulo</string>
    <string name="todo_Add_Task">Agrega Tarea</string>
    <string name="todo_Business">Negocios</string>
    <string name="todo_Personal">Personal</string>
    <string name="todo_other">Otros</string>
    <string name="todo_creater_task">Crear Tarea</string>

    <!--    HERO-->
    <string name="heroApp">HeroApp</string>
    <string name="hero_description">description</string>
    <string name="hero_intelligence">Inteligencia</string>
    <string name="hero_strength">Fuerza</string>
    <string name="hero_speed">Velocidad</string>
    <string name="hero_durability">Resistencia</string>
    <string name="hero_power">Poder</string>
    <string name="hero_combat">Combate</string>

<!--    setting-->
    <string name="settingApp">"settingApp"</string>
    <string name="setting_modo_black">Modo Oscuro</string>
    <string name="setting_modo_black_description">Activa el modo oscuro para una mejor experiencia visual</string>
    <string name="setting_bluetooth">Activar Bluetooth</string>
    <string name="setting_bluetooth_description">Activa el modo Bluetooth para una mejor comunicación</string>
    <string name="setting_volumen">Volumen</string>
    <string name="setting_volumen_description">Ajusta el volumen de la aplicación</string>
    <string name="setting_mute">Mute</string>
    <string name="setting_mute_description">Mute la aplicación para  llamadas telefónicas</string>
    <string name="setting_vibration">Vibracion</string>
    <string name="setting_vibration_description">Activa la vibración de la aplicación"</string>




</resources>
