<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MenuActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaludarApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/teal_700"
        android:text="@string/SaludarApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200"
        android:text="@string/IMCApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToDoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purple_500"
        android:text="@string/ToDoApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHeroApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/peso_normal"
        android:text="@string/heroApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/superhero_stat_durability"
        android:text="@string/settingApp" />
</LinearLayout>