<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_todo_app"
        tools:context=".todoapp.ToDoAppActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_marginVertical="44dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/ToDoApp">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_category"
            android:textAllCaps="true"
            android:textColor="@color/todo_subtitle_text"
            android:layout_marginHorizontal="32dp">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_task"
            android:layout_marginTop="32dp"
            style="@style/TodoSubtitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:backgroundTint="@color/todo_accent"
            app:tint="@color/white"
            app:fabSize="normal"
            android:src="@drawable/outline_add_50"
            android:layout_gravity="end|bottom" />
    </LinearLayout>
</FrameLayout>
